@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-11-30T08:22:25Z",
+  "timestamp" : "2022-11-30T16:24:22Z",
   "count_outdated" : 2626,
   "uniques_outdated" : 710,
   "count" : 2655,
-  "uniques" : 725,
+  "uniques" : 726,
   "clones" : [
     {
       "timestamp": "2022-11-16T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -86,6 +86,13 @@
       "timestamp": "2022-11-28T00:00:00Z",
       "count": 2,
       "count_minmax": [ 2, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-11-30T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
