@@ -1,10 +1,10 @@
 {
   "count": 29,
-  "uniques": 5,
+  "uniques": 6,
   "clones": [
     {
       "timestamp": "2022-11-16T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
@@ -60,6 +60,11 @@
     {
       "timestamp": "2022-11-28T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-11-30T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
