@@ -1,3 +1,11 @@
+2022-11-30T16:24:22Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3585145848 # 1076
+* notice: last 14d: unq all: 6 29
+* notice: prev accum: outdated-unq outdated-all / unq all: 710 2626 / 725 2655
+* notice: next accum: outdated-unq outdated-all / unq all: 710 2626 / 726 2655
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-11-16 2022-11-30]
+
 2022-11-30T08:22:25Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3581532645 # 1075
 * notice: last 14d: unq all: 5 29
